Update gitignore, update nav, add smooth scroll

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@ title: About - SarahMay Harel
 header: false
 ---
 
+<!-- Flower 1 -->
 <!-- <div class="flower2">
     <img src="./assets/img/flower 2.1.png" class="flower2img">
 </div> -->
 
+<!-- Hero -->
 <section class="hello padrule">
     <h2>Hi, I'm <br> SarahMay Harel</h2>
     <h3 id="typed">Front End Developer</h3>
 </section>
 
+<!-- Shape 1 -->
 <div class="shape shape-bottom">
     <div class="custom-shape-divider-top-1658328596">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -23,6 +26,7 @@ header: false
     </div>
 </div>
 
+<!-- About Me -->
 <div class="intro row padrule m-0">
     <div class="col-lg-6 col-sm-12 text-center headshot">
         <img src="./assets/img/harel_sarahmay_headshot.JPG" class="circle">
@@ -42,7 +46,7 @@ header: false
     </div>
 </div>
 
-
+<!-- Shape 2 -->
 <div class="shape">
     <div class="custom-shape-divider-top-1658328325">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -53,16 +57,17 @@ header: false
     </div>
 </div>
 
-
+<!-- Flower 2 -->
 <!-- <div class="flower">
     <img src="./assets/img/flower.png" class="flowerimg">
 </div> -->
 
-<div class="skillscont padrule">
+<!-- Skills -->
+<div class="skillscont padrule pb-5">
     <div class="row">
         <div class="col-md-6 col-sm-12">
             <div>
-                <h2 class="text-center p-0">Skills</h2>
+                <h2 class="text-center pt-3">Skills</h2>
             </div>
             <div class="skills p-0 m-0 row ">
                 <div class="col-md-6 col-sm-12 text-center">
@@ -92,6 +97,7 @@ header: false
     </div>
 </div>
 
+<!-- Shape 3 -->
 <div class="shape shape-bottom">
     <div class="custom-shape-divider-top-1658328596">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -102,10 +108,13 @@ header: false
     </div>
 </div>
 
+<!-- Mushroom -->
 <!-- <div class="mushrooms">
     <img src="./assets/img/mushroom 2.png" class="mushroomimg">
 </div> -->
-<section class="experience">
+
+<!-- Experience -->
+<section id="resume" class="experience">
     <div class="pt-5 ">
         <h2 class="text-center">Experience</h2>
     </div>
@@ -154,11 +163,12 @@ header: false
 
     </div>
     <div class="text-center pb-5">
-        <a href="https://www.sarahmayharel.com/assets/img/Harel,%20SarahMay%20-%20Resume%20-%20December%202022.pdf" style="text-decoration: underline wavy; text-underline-offset: 8px;">Download Full Resume</a>
+        <a href="https://www.sarahmayharel.com/assets/img/Harel,%20SarahMay%20-%20Resume%20-%20December%202022.pdf"
+            style="text-decoration: underline wavy; text-underline-offset: 8px;">Download Full Resume</a>
     </div>
 </section>
 
-
+<!-- Shape 4 -->
 <div class="shape">
     <div class="custom-shape-divider-top-1658328325">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -169,6 +179,7 @@ header: false
     </div>
 </div>
 
+<!-- Certifications -->
 <section>
     <div class="skillscont padrule">
         <div class="row certifications">
@@ -176,7 +187,7 @@ header: false
                     class="d-none d-md-block d-lg-block minimalist2"></div>
             <div class="col-md-6 col-sm-12">
                 <div>
-                    <h2 class="pl-5 pt-3 p-0">Certifications</h2>
+                    <h2 class="pl-5 pt-3">Certifications</h2>
                 </div>
                 <div class="skills p-0 m-0">
                     <div class="">
@@ -193,6 +204,7 @@ header: false
     </div>
 </section>
 
+<!-- Shape 5 -->
 <div class="shape shape-bottom">
     <div class="custom-shape-divider-top-1658328596">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -203,201 +215,206 @@ header: false
     </div>
 </div>
 
-<div class="pt-5 ">
-    <h2 class="text-center">Tools & Technologies</h2>
-</div>
-<div class="experience contained pb-5 padrule">
-
-
-    <div class="grid">
-        <div class="logo">
-            <img src="assets/img/logos/HTML5-Logo-color.png" class="tools">
-            <div class="logocaption">HTML</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/CSS3-Logo-color.png" class="tools">
-            <div class="logocaption">CSS</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/JavaScript-logo.png" class="tools">
-            <div class="logocaption">JavaScript</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/GitHub-Logo.png" class="tools darklogo">
-            <div class="logocaption">GitHub</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/Git-Logo-color.png" class="tools">
-            <div class="logocaption">Git</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/Shopify logo.png" class="tools">
-            <div class="logocaption">Shopify</div>
-        </div>
-
-        <div class="logo">
-            <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png"
-                    class="tools darklogo">
-            </div>
-            <div class="logocaption">Jekyll</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/Figma-Icon.svg" class="tools">
-            <div class="logocaption">Figma</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/Zeplin logo.png" class="tools">
-            <div class="logocaption">Zeplin</div>
-        </div>
-
-        <div class="logo">
-            <img src="assets/img/logos/vscode-logo.png" class="tools">
-            <div class="logocaption">VS Code</div>
-        </div>
-
-        <div class="logo">
-            <div><img src="assets/img/logos/google analytics logo.png" class="tools"></div>
-            <div class="logocaption">Google Analytics</div>
-        </div>
-
-        <div class="logo">
-            <div class="logo-height">
-                <img src="assets/img/logos/sass logo.png" class="tools">
-            </div>
-            <div class="logocaption">SCSS</div>
-        </div>
-
-        <div class="logo">
-            <div class="logo-height">
-                <img src="assets/img/logos/bootstrap-logo.svg" class="tools">
-            </div>
-            <div class="logocaption">Bootstrap</div>
-        </div>
-
-        <div class="logo">
-            <div><img src="assets/img/logos/WordPress-logo.png" class="tools darklogo"></div>
-            <div class="logocaption">WordPress</div>
-        </div>
-
-        <div class="logo">
-            <div class="short-logo"><img src="assets/img/logos/logo-craft-cms.svg" class="tools"></div>
-            <div class="logocaption">Craft CMS</div>
-        </div>
-
-
+<!-- Toolkit -->
+<section>
+    <div class="pt-5 ">
+        <h2 class="text-center">Tools & Technologies</h2>
     </div>
+    <div class="experience contained pb-5 padrule">
 
-    <div class="hiding d-sm-block d-md-none">
-        <div class="row">
-            <div class="col-md-2 col-sm-6">
-                <div class="logo">
-                    <img src="assets/img/logos/HTML5-Logo-color.png" class="tools">
-                    <div class="logocaption">HTML</div>
-                </div>
+
+        <!-- Toolkit Desktop -->
+        <div class="grid">
+            <div class="logo">
+                <img src="assets/img/logos/HTML5-Logo-color.png" class="tools">
+                <div class="logocaption">HTML</div>
             </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/CSS3-Logo-color.png" class="tools">
-                    <div class="logocaption">CSS</div>
-                </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/CSS3-Logo-color.png" class="tools">
+                <div class="logocaption">CSS</div>
             </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/JavaScript-logo.png" class="tools">
-                    <div class="logocaption">JavaScript</div>
-                </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/JavaScript-logo.png" class="tools">
+                <div class="logocaption">JavaScript</div>
             </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/GitHub-Logo.png" class="tools darklogo">
-                    <div class="logocaption">GitHub</div>
-                </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/GitHub-Logo.png" class="tools darklogo">
+                <div class="logocaption">GitHub</div>
             </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/Git-Logo-color.png" class="tools">
-                    <div class="logocaption">Git</div>
-                </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/Git-Logo-color.png" class="tools">
+                <div class="logocaption">Git</div>
             </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/Shopify logo.png" class="tools">
+                <div class="logocaption">Shopify</div>
+            </div>
+
+            <div class="logo">
+                <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png"
+                        class="tools darklogo">
+                </div>
+                <div class="logocaption">Jekyll</div>
+            </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/Figma-Icon.svg" class="tools">
+                <div class="logocaption">Figma</div>
+            </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/Zeplin logo.png" class="tools">
+                <div class="logocaption">Zeplin</div>
+            </div>
+
+            <div class="logo">
+                <img src="assets/img/logos/vscode-logo.png" class="tools">
+                <div class="logocaption">VS Code</div>
+            </div>
+
+            <div class="logo">
+                <div><img src="assets/img/logos/google analytics logo.png" class="tools"></div>
+                <div class="logocaption">Google Analytics</div>
+            </div>
+
+            <div class="logo">
+                <div class="logo-height">
+                    <img src="assets/img/logos/sass logo.png" class="tools">
+                </div>
+                <div class="logocaption">SCSS</div>
+            </div>
+
+            <div class="logo">
+                <div class="logo-height">
+                    <img src="assets/img/logos/bootstrap-logo.svg" class="tools">
+                </div>
+                <div class="logocaption">Bootstrap</div>
+            </div>
+
+            <div class="logo">
+                <div><img src="assets/img/logos/WordPress-logo.png" class="tools darklogo"></div>
+                <div class="logocaption">WordPress</div>
+            </div>
+
+            <div class="logo">
+                <div class="short-logo"><img src="assets/img/logos/logo-craft-cms.svg" class="tools"></div>
+                <div class="logocaption">Craft CMS</div>
+            </div>
+
+
         </div>
-        <div class="row">
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/Shopify logo.png" class="tools">
-                    <div class="logocaption">Shopify</div>
+
+        <!-- Toolkit Mobile -->
+        <div class="hiding d-sm-block d-md-none">
+            <div class="row">
+                <div class="col-md-2 col-sm-6">
+                    <div class="logo">
+                        <img src="assets/img/logos/HTML5-Logo-color.png" class="tools">
+                        <div class="logocaption">HTML</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png"
-                            class="tools darklogo"></div>
-                    <div class="logocaption">Jekyll</div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <img src="assets/img/logos/CSS3-Logo-color.png" class="tools">
+                        <div class="logocaption">CSS</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/Figma-Icon.svg" class="tools">
-                    <div class="logocaption">Figma</div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <img src="assets/img/logos/JavaScript-logo.png" class="tools">
+                        <div class="logocaption">JavaScript</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/Zeplin logo.png" class="tools">
-                    <div class="logocaption">Zeplin</div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <img src="assets/img/logos/GitHub-Logo.png" class="tools darklogo">
+                        <div class="logocaption">GitHub</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2 col-sm-12">
-                <div class="logo">
-                    <img src="assets/img/logos/vscode-logo.png" class="tools">
-                    <div class="logocaption">VS Code</div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <img src="assets/img/logos/Git-Logo-color.png" class="tools">
+                        <div class="logocaption">Git</div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-2 col-sm-12">
                     <div class="logo">
-                        <div><img src="assets/img/logos/google analytics logo.png" class="tools"></div>
-                        <div class="logocaption">Google Analytics</div>
+                        <img src="assets/img/logos/Shopify logo.png" class="tools">
+                        <div class="logocaption">Shopify</div>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-12">
                     <div class="logo">
-                        <div><img src="assets/img/logos/sass logo.png" class="tools"></div>
-                        <div class="logocaption">SCSS</div>
+                        <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png"
+                                class="tools darklogo"></div>
+                        <div class="logocaption">Jekyll</div>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-12">
                     <div class="logo">
-                        <div>
-                            <img src="assets/img/logos/bootstrap-logo.svg" class="tools">
+                        <img src="assets/img/logos/Figma-Icon.svg" class="tools">
+                        <div class="logocaption">Figma</div>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <img src="assets/img/logos/Zeplin logo.png" class="tools">
+                        <div class="logocaption">Zeplin</div>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <img src="assets/img/logos/vscode-logo.png" class="tools">
+                        <div class="logocaption">VS Code</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 col-sm-12">
+                        <div class="logo">
+                            <div><img src="assets/img/logos/google analytics logo.png" class="tools"></div>
+                            <div class="logocaption">Google Analytics</div>
                         </div>
-                        <div class="logocaption">Bootstrap</div>
                     </div>
-                </div>
-                <div class="col-md-2 col-sm-12">
-                    <div class="logo">
-                        <div><img src="assets/img/logos/WordPress-logo.png" class="tools darklogo"></div>
-                        <div class="logocaption">WordPress</div>
+                    <div class="col-md-2 col-sm-12">
+                        <div class="logo">
+                            <div><img src="assets/img/logos/sass logo.png" class="tools"></div>
+                            <div class="logocaption">SCSS</div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-2 col-sm-12">
-                    <div class="logo">
-                        <div class="short-logo"><img src="assets/img/logos/logo-craft-cms.svg" class="tools"></div>
-                        <div class="logocaption">Craft CMS</div>
+                    <div class="col-md-2 col-sm-12">
+                        <div class="logo">
+                            <div>
+                                <img src="assets/img/logos/bootstrap-logo.svg" class="tools">
+                            </div>
+                            <div class="logocaption">Bootstrap</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-12">
+                        <div class="logo">
+                            <div><img src="assets/img/logos/WordPress-logo.png" class="tools darklogo"></div>
+                            <div class="logocaption">WordPress</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-12">
+                        <div class="logo">
+                            <div class="short-logo"><img src="assets/img/logos/logo-craft-cms.svg" class="tools"></div>
+                            <div class="logocaption">Craft CMS</div>
+                        </div>
                     </div>
                 </div>
             </div>
+
+
         </div>
-
-
     </div>
-</div>
+</section>
 
 
 <!-- 
