Remove homepage images, add fragment mono font

--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@ title: About - SarahMay Harel
 header: false
 ---
 
-<!-- Flower 1 -->
-<!-- <div class="flower2">
-    <img src="./assets/img/flower 2.1.png" class="flower2img">
-</div> -->
-
 <!-- Hero -->
 <section class="hello padrule">
-    <h2>Hi, I'm <br> SarahMay Harel</h2>
+    <h2>Hi, I'm</h2>
+    <h1>SarahMay Harel</h1>
     <h3 id="typed">Front End Developer</h3>
 </section>
 
@@ -56,11 +52,6 @@ header: false
         </svg>
     </div>
 </div>
-
-<!-- Flower 2 -->
-<!-- <div class="flower">
-    <img src="./assets/img/flower.png" class="flowerimg">
-</div> -->
 
 <!-- Skills -->
 <div class="skillscont padrule pb-5">
@@ -107,11 +98,6 @@ header: false
         </svg>
     </div>
 </div>
-
-<!-- Mushroom -->
-<!-- <div class="mushrooms">
-    <img src="./assets/img/mushroom 2.png" class="mushroomimg">
-</div> -->
 
 <!-- Experience -->
 <section id="resume" class="experience">
@@ -415,9 +401,3 @@ header: false
         </div>
     </div>
 </section>
-
-
-<!-- 
-<div class="plant">
-    <img src="/assets/img/plant.png" class="plantimg">
-</div> -->
