--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ header: false
 </div>
 
 <!-- About Me -->
-<div class="intro row padrule m-0">
+<div id="about" class="intro row padrule m-0">
     <div class="col-lg-6 col-sm-12 text-center headshot">
         <img src="./assets/img/harel_sarahmay_headshot.JPG" class="circle">
     </div>
 
     <div class="col-lg-6 col-sm-12 intro-text">
-        <h2 id="about" class="pt-5 intro-name">About Me</h2>
+        <h2 class="pt-5 intro-name">About Me</h2>
         <p class="intro-body">I am a front end web developer located in New York. I’m inspired by clean design and
             intuitive, dynamic user experiences, and strive to bring those elements to every project I work on. </p>
         <p>My experience in front end and UX/UI development includes JavaScript, JQuery, SCSS, Bootstrap, Jekyll, and
