--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ header: false
     <div class="col-lg-6 col-sm-12 intro-text">
         <h2 class="pt-5 intro-name">About Me</h2>
         <p class="intro-body">I am a front end web developer located in New York. I’m inspired by clean design and
-            intuitive, dynamic user experiences, and strive to bring those elements to every project I work on. </p>
+            user experiences, and strive to bring those elements to every project I work on. </p>
         <p>My experience in front end and UX/UI development includes JavaScript, JQuery, SCSS, Bootstrap, Jekyll, and
             Liquid. On the CMS side, I’m proficient with Shopify, WordPress, Craft, and GitHub Pages. I'm committed to
             using git for its reliable version control and believe that it is a key component to successful
-            collaboration. I’m a highly organized person with a strong attention to detail and a desire to solve
+            collaboration. I’m a highly organized person with a desire to solve
             problems both efficiently and elegantly.</p>
         <p>In my spare time, I love rock climbing, solving crossword puzzles, and caring for my forest of houseplants.
         </p>
