--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@ header: false
                 read
                 a written statement honoring Pride Month in June 2021</li>
         </ul>
-        <h5>Principal Draftsperson</h5>
+        <!-- <h5>Principal Draftsperson</h5>
         <p><em>Epstein Engineering P.C. (2014 &ndash; 2017)</em></p>
         <ul>
             <li>Developed technical drawings of residential and commercial buildings using AutoCAD</li>
             <li>Filed plans and engineering reports with government agencies</li>
-        </ul>
+        </ul> -->
 
     </div>
     <div class="text-center pb-5">
