--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ header: false
 
 <!-- Experience -->
 <section id="resume" class="experience">
-    <div class="pt-5 ">
+    <div>
         <h2 class="text-center">Experience</h2>
     </div>
     <div class="pb-5 padrule">
