Remove extra class

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ header: false
     <div class="pt-5 ">
         <h2 class="text-center">Tools & Technologies</h2>
     </div>
-    <div class="experience contained pb-5 padrule">
+    <div class="contained pb-5 padrule">
 
 
         <!-- Toolkit Desktop -->
