Update project portfolio

--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,96 @@ layout: default
 title: Projects - SarahMay Harel
 ---
 
-{% include project5.html %}
-{% include project1.html %}
-{% include project2.html %}
-{% include project3.html %}
+
+<div class="container projects">
+  <div class="heading">
+    <h2>Projects</h1>
+    <p class="mb-5 projects-intro">Welcome to my project portfolio! Below is a selection of my recent web development work, ranging from bespoke website templates for eCommerce businesses to data analytics and UX/UI development. Each project was tailored to meet the unique needs of my clients and designed with a focus on user experience, functionality, and scalability.</p>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <figure class="project">
+        <img src="assets/img/logos/Shopify-2.0-logo-project.png" class="project-image">
+      </figure>
+      <figcaption class="project-title">
+        <h3 class="pt-0">Shopify 2.0 Theme Architecture</h3>
+        <p class="project-skills">Front End Development, Git</p>
+        <p>Refactored clients' existing Liquid templates to utilize new features introduced in the 2.0 architecture.</p>
+      </figcaption>
+        <ul>
+          <li><a href="">Read More</a></li>
+        </ul>
+    </div>
+    <div class="col-md-4">
+      <figure class="project">
+        <img src="assets/img/workman-cart-mobile-1.webp" class="project-image">
+      </figure>
+      <figcaption class="project-title">
+        <h3 class="pt-0">Shopify Templates</h3>
+        <p class="project-skills">UX/UI Design, Front End Development</p>
+        <p>Designed and built custom templates for an independent book publisher's eCommerce store.</p>
+      </figcaption>
+      <ul>
+        <li><a href="">Read More</a></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <figure class="project">
+        <img src="assets/img/data-analytics-2.png" class="project-image">
+      </figure>
+      <figcaption class="project-title">
+        <h3 class="pt-0">Data Analytics</h3>
+        <p class="project-skills">Google Analytics, Data Visualization & Reporting</p>
+        <p>Developed data-driven presentations for C-level stakeholders illustrating the websites&rsquo; analytics to inform successful data-driven business decisions.</p>
+      </figcaption>
+      <ul>
+        <li><a href="">Read More</a></li>
+      </ul>
+    </div>
+
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <figure class="project">
+        <img src="assets/img/pageaday-home-mobile-1-2-2.png" class="project-image">
+      </figure>
+      <figcaption class="project-title">
+        <h3 class="pt-0">eCommerce Website Redesign</h3>
+        <p class="project-skills">UX/UI Development, Project Management</p>
+        <p>Designed and built custom templates for an independent book publisher's eCommerce store.</p>
+      </figcaption>
+      <ul>
+        <li><a href="">Read More</a></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <figure class="project">
+        <img src="assets/img/jekyll-template-project.png" class="project-image">
+      </figure>
+      <figcaption class="project-title">
+        <h3 class="pt-0">Portfolio Template</h3>
+        <p class="project-skills">Front End Development, Jekyll, GitHub</p>
+        <p>Developed a custom portfolio website template using HTML, SCSS, and JavaScript. Jekyll generates a performant static site, and GitHub Pages offers scalability and security.</p>
+      </figcaption>
+      <ul>
+        <li><a href="">Read More</a></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <figure class="project">
+        <img src="assets/img/DNS-godaddy-project.png" class="project-image">
+      </figure>
+      <figcaption class="project-title">
+        <h3 class="pt-0">DNS Management</h3>
+        <p class="project-skills">Netlify, GoDaddy</p>
+        <p>Maintained and performed transfers for clients' domains and DNS.</p>
+      </figcaption>
+      <ul>
+        <li><a href="">Read More</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 
   <div class="text-center  pt-5 pb-5">
     <p class="disclaimer">Some aspects of these website images have been replaced in compliance with non-disclosure agreements.</p>
