Project modal mobile styles

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@ title: Projects - SarahMay Harel
         Each project was tailored to meet the unique needs of my clients and designed with a focus on user experience,
         functionality, and scalability.</p>
   </div>
-  <div class="row mb-5">
+  <div class="row mb-5  mx-0">
     <div class="col-md-4">
       <figure class="project">
         <img src="assets/img/logos/Shopify-2.0-logo-project.png" class="project-image">
@@ -56,7 +56,7 @@ title: Projects - SarahMay Harel
     </div>
 
   </div>
-  <div class="row">
+  <div class="row  mx-0">
     <div class="col-md-4">
       <figure class="project">
         <img src="assets/img/pageaday-home-mobile-1-2-2.png" class="project-image">
