Fix row margin on tools + tech

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ id: home
 
         <!-- Toolkit Mobile -->
         <div class="hiding d-sm-block d-md-none">
-            <div class="row">
+            <div class="row m-0">
                 <div class="col-md-2 col-sm-6">
                     <div class="logo">
                         <img src="assets/img/logos/HTML5-Logo-color.png" class="tools">
